# cnm3a

./: hola  inst  pyproject.toml
Gcode/: Cleaner.ngc  Puente.ngc
debian/: control  rules
src/cnm3a/: __init__.py  config.yml  mainwindow.py  mainwindow.py.safe
src/cnm3a/ui/: mainwindow.ui  style.qss
src/cnm3a/ui/rs/: cp
