[build-system]
requires = ["poetry-core", "versioneer[toml]"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cnm3a"
authors = [
  "John Doe <doe.john@example.com>"
]
description = "CNM3A - A QtPyVCP based Virtual Control Panel for LinuxCNC"
readme = "README.md"
version = "0.0.1"

packages = [
    { include = "cnm3a", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.scripts]
cnm3a = "cnm3a:main"

[tool.poetry.plugins]

[tool.poetry.plugins."qtpyvcp.vcp"]
cnm3a = "cnm3a"

[tool.poetry.plugins."qtpyvcp.widgets"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/cnm3a/_version.py"
versionfile_build = "cnm3a/_version.py"
tag_prefix = ""
parentdir_prefix = ""
